annotation review